# Insertable

./: Insertable.cabal  README.md  insertable.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Data/: Insertable.hs
src/Data/Insertable/: Example.hs
test/: Spec.hs
